US800 re-fixed scrollbar that i broke

--- a/app/scss/globalCSS/_mixIn.scss
+++ b/app/scss/globalCSS/_mixIn.scss
@@ -122,7 +122,7 @@
     {
         border-radius: 0;
         background: $track-background;
-        box-shadow: rgba(255, 255, 255, 0.1) 0 1px 0, rgba(0, 0, 0, 0.2) 0 0px 1px 1px inset;
+        box-shadow: rgba(255, 255, 255, 0.1) 0 1px 0, rgba(0, 0, 0, 0.2) 0 -1px 1px 1px inset;
     }
 
     &::-webkit-scrollbar-thumb
